--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Portuguese literature -- History and criticism'
 - !lcsh 'Authors, Portuguese'
 - !lcc 'PQ'
+- GITenberg
 title: Vinte Annos de Vida Litteraria
 url: http://www.gutenberg.org/ebooks/33581
